target/wasm32-unknown-unknown/release/echo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-api
  template:
    metadata:
      labels:
        app: echo-api
    spec:
      containers:
        - name: echo-api
          image: sangjinn/echo-api:latest   
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: echo-api
  labels:
    app: echo-api
spec:
  selector:
    app: echo-api
  ports:
    - port: 8081
      targetPort: 8081
