target/wasm32-unknown-unknown/release/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: default
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: listener_0
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8080
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: backend
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: service_backend
                    http_filters:
                      - name: envoy.filters.http.wasm
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                          config:
                            name: "rust_filter"
                            vm_config:
                              vm_id: "rust_vm"
                              runtime: "envoy.wasm.runtime.v8"
                              code:
                                local:
                                  filename: "/etc/envoy/wasm/envoy_wasm_filter.wasm"
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    tracing:
                      client_sampling:
                        value: 100
                      random_sampling:
                        value: 100
                      overall_sampling:
                        value: 100

      clusters:
        - name: service_backend
          connect_timeout: 0.25s
          type: LOGICAL_DNS
          dns_lookup_family: V4_ONLY
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: service_backend
            endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: echo-api.default.svc.cluster.local
                        port_value: 8081

        - name: otel-collector
          connect_timeout: 1s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: otel-collector
            endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: otel-collector-opentelemetry-collector.default.svc.cluster.local
                        port_value: 4317
